# FolderSorter

./: CHANGELOG.md  DISCOVERABILITY.md  LICENSE  PRIVACY.md  PRIVACY.zh-TW.md  PRODUCT_STRATEGY.md  PRODUCT_STRATEGY.zh-TW.md  PYPI.md  Package.swift  README.en.md  README.md  README.zh-TW.md  ROADMAP.md  ROADMAP.zh-TW.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  publish-pypi.yml
Assets/: AppIcon.icns
Examples/: general-mac-cleanup.rules.json
Sources/FolderSorter/: FolderSorterApp.swift
Sources/FolderSorterCLI/: main.swift
Sources/FolderSorterCore/: ClassificationCore.swift
Tests/FolderSorterCoreTests/: ClassificationEngineTests.swift
python/foldersorter/: __init__.py  cli.py  core.py
python_tests/: test_python_core.py
script/: build_and_run.sh  build_release_dmg.sh  generate_icon.swift
