[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "foldersorter"
version = "0.1.0"
description = "Preview-first macOS file organizer with undo, SwiftUI GUI, and CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "FolderSorter contributors" }
]
keywords = [
  "macos",
  "file-organizer",
  "downloads-folder",
  "screenshot-organizer",
  "productivity",
  "swiftui",
  "cli"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/kodlbegiko/FolderSorter"
Source = "https://github.com/kodlbegiko/FolderSorter"
Issues = "https://github.com/kodlbegiko/FolderSorter/issues"

[project.scripts]
foldersorter = "foldersorter.cli:main"

[tool.hatch.build.targets.sdist]
include = [
  "/Examples",
  "/LICENSE",
  "/Package.swift",
  "/README.md",
  "/README.en.md",
  "/README.zh-TW.md",
  "/Sources",
  "/Tests",
  "/python/foldersorter"
]

[tool.hatch.build.targets.wheel]
packages = ["python/foldersorter"]

[tool.hatch.build.targets.wheel.force-include]
"Package.swift" = "foldersorter/swift_project/Package.swift"
"Sources" = "foldersorter/swift_project/Sources"
"Tests" = "foldersorter/swift_project/Tests"
"Examples" = "foldersorter/swift_project/Examples"
